--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,8 +8,7 @@
   title={Investigations on the Theory of the Brownian Movement},
   author={Einstein, Albert},
   year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  publisher={Courier Corporation}
 }
 
 @article{einstein1950meaning,
@@ -80,6 +79,5 @@
   title={Letters on wave mechanics},
   author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
   year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  publisher={Vision}
 }
